@@ -6,6 +6,8 @@ Add new items to top.
  PATCH: [ 1481213 ] Fix foldercompare short-size suffixes and localize them
   Src: DirViewColItems.cpp Merge.rc resource.h
   Src/Languages/*: Merge*.rc
+ PATCH: [ 1481391 ] Make LocationView update from MergeView more safe
+  Src: LocationView.cpp MergeEditView.cpp MergeEditView.h
 
 2006-05-03 Kimmo
  PATCH: [ 1480652 ] Small fix for XML syntax highlight
